--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 27px;
+   
+  }
+  #name{
+    padding: 10%;
+    -ms-transform: rotate(-20deg); /* IE 9 */
+  transform: rotate(-20deg);
+  font-weight: 500;
+  
+  font-family: 'Akaya Telivigala', cursive;
+ font-size: 50px;
   }
   body {
     width: 100%;
@@ -11,6 +21,7 @@
     justify-content: center;
     align-items: center;
     background: #fefefe;
+    
   }
   .container {
     margin-top: 8rem;
@@ -238,7 +249,7 @@
   /* ANIMATION */
   .string:active{
     animation-name:stringMovement ;
-    animation-duration: 0.1s;
+    animation-duration: 0.2s;
   }
   
   @keyframes stringMovement {
